ajout des modifications home.jsx

--- a/app/utils/locales/en.json
+++ b/app/utils/locales/en.json
@@ -46,7 +46,11 @@
     "Category": "Category",
     "Favorite_Restaurant": "Favorite Restaurant",
     "Nearest_restaurant": "Nearest restaurant",
+    "List_restaurant": "Restaurants List",
     "Payment": "Payment",
+    "Recommendation": "Recommendations...",
+    "Text_Recommandation": "Your recommendation has been noted",
+    "Add_Recommendation": "Add a Recommandations",
     "My_Cart": "My Cart",
     "Result": "Result",
     "Description_plats": "Description Food",
