--- a/app/utils/locales/fr.json
+++ b/app/utils/locales/fr.json
@@ -46,7 +46,11 @@
     "Category": "Categorie",
     "Favorite_Restaurant": "Restaurant Favori",
     "Nearest_restaurant" : "Restaurant plus proche",
+    "List_restaurant": "Liste des restaurants",
     "Payment": "Paiement",
+    "Recommendation": "Recommandations...",
+    "Text_Recommandation": "Votre recommandation à été noté",
+    "Add_Recommendation": "Ajouter une Recommandations",
     "My_Cart": "Mon Panier",
     "Result": "Resultats",
     "Description_plats": "Description Repas",
