mis en place du calcul  des destance entre le user et le restaurant ainsi que l'afficharge des restaurants

--- a/app/utils/locales/fr.json
+++ b/app/utils/locales/fr.json
@@ -77,6 +77,8 @@
     "On_spot": "Sur place",
     "Free": "Gratuite",
     "Delivery": "Livraison",
-    "Fast_menu": "menu Rapide"
+    "Fast_menu": "menu Rapide",
+    "Description_food": "Description Repas",
+    "No_data": "Données nos disponible"
 
 }
