--- a/app/utils/locales/en.json
+++ b/app/utils/locales/en.json
@@ -77,7 +77,9 @@
     "On_spot": "On the spot",
     "Free": "Free",
     "Delivery": "Delivery",
-    "Fast_menu": "Fast menu"
+    "Fast_menu": "Fast menu",
+    "Description_food": "Description Food",
+    "No_data": "Data available"
     
 
   }
