ajout de plats raptide et plusiseur modif

--- a/app/utils/locales/en.json
+++ b/app/utils/locales/en.json
@@ -79,7 +79,8 @@
     "Delivery": "Delivery",
     "Fast_menu": "Fast menu",
     "Description_food": "Description Food",
-    "No_data": "Data available"
+    "No_data": "Data available",
+    "Star_ratings": "Star Ratings"
     
 
   }
