ajout de la des animation et la recuperation des plat n fontion des restaurant pas memu

--- a/app/utils/locales/en.json
+++ b/app/utils/locales/en.json
@@ -90,7 +90,8 @@
     "No_data": "Data available",
     "Star_ratings": "Star Ratings",
     "Send": "Send",
-    "Submit_complaint": "Submit your complaint"
+    "Submit_complaint": "Submit your complaint",
+    "menuVide": "This menu is empty, please choose another menu"
     
 
   }
