--- a/app/utils/locales/fr.json
+++ b/app/utils/locales/fr.json
@@ -90,6 +90,7 @@
     "No_data": "Données nos disponible",
     "Star_ratings": "Notes par étoiles",
     "Send": "Envoyer",
-    "Submit_complaint": "Soumettez votre doleance"
+    "Submit_complaint": "Soumettez votre doleance",
+    "menuVide": "Ce menu est vide veillez choisir un autre menu SVP"
 
 }
